# Froth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Cream/_src/: creampch.cpp  creampch.h  frothpch.cpp
Cream/_src/Cream/Core/: Application.cpp  Application.h  Assertions.h  Base.h  Entrypoint.h
Cream/_src/Cream/Core Layer/: Application.h  Assertions.h  Base.h  Entrypoint.h
Cream/_src/Cream/Core Layer/Memory/: DoubleBufferedAllocator.cpp  DoubleBufferedAllocator.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.h  StackAllocatorDoubleEnded.cpp  StackAllocatorDoubleEnded.h
Cream/_src/Cream/Core/Memory/: DoubleBufferedAllocator.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h  StackAllocatorDoubleEnded.cpp  StackAllocatorDoubleEnded.h
Cream/_src/Cream/Platform Dependent/: PointerTypes.h  PrimitiveTypes.h
Cream/_src/Cream/Platform Dependent/Collections/: ListDoubleLink.h  ListSingleLink.h  Vector.h
Cream/_src/Cream/Platform Independence Layer/: BuildDefines.h  String.cpp  String.h
Cream/_src/Cream/Platform Independence Layer/Collections/: ListDoubleLink.h  ListSingleLink.h  Vector.h
Cream/_src/Cream/Utility/: Pointers.h  Utility.h
Cream/_src/Froth/Core Layer/: Application.cpp
Cream/_src/Froth/Core Layer/Memory/: DoubleBufferedAllocator.h  PoolAllocator.cpp  StackAllocator.cpp  StackAllocator.h  StackAllocatorDoubleEnded.cpp
Cream/_src/Froth/Platform Independence Layer/: PrimitiveTypes.h
Cream/dependencies/Logger/: premake5.lua
Cream/dependencies/Logger/include/: Logger.h
Froth/_src/: frothpch.h
Froth/_src/Froth/Core Layer/: Application.cpp  Application.h  Assertions.h  Base.h  Entrypoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Froth/_src/Froth/Core Layer/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
Froth/_src/Froth/Core Layer/Memory/: DoubleBufferedAllocator.cpp  PoolAllocator.h  StackAllocatorDoubleEnded.h
Froth/_src/Froth/Platform Independence Layer/: BuildDefines.h  PointerTypes.h  PrimitiveTypes.h  Timer.h
Froth/_src/Froth/Platform Independence Layer/File System/: File.cpp  File.h  FilePath.cpp  FilePath.h
Froth/_src/Froth/Platform Independence Layer/Window/: Window.cpp  (+7 more)
Froth/dependencies/FMath/: premake5.lua
Froth/dependencies/FMath/_src/: Grassman.h  Helper.cpp  Helper.h  Line.cpp  Line.h  Matrix3D.cpp  Matrix3D.h  Matrix4D.cpp  Matrix4D.h  Plane.cpp  Plane.h  Point3D.cpp  Point3D.h  Quaternion.cpp  Quaternion.h  Transform4D.cpp  Transform4D.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h
Froth/dependencies/Logger/: premake5.lua
Playground/_src/: Playground.cpp
Playground/shaders/: shader.vert  vert.spv
froth/: CMakeLists.txt  Defines.h  Defines.h.in
froth/core/: Application.cpp  Application.h  Entrypoint.cpp  Entrypoint.h  Layer.h
froth/core/events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
froth/core/logger/: Logger.cpp  Logger.h
froth/platform/filesystem/: Filesystem.cpp
froth/platform/keys/: GLFWCodes.h  GLFWKeycodes.cpp  GLFWKeycodes.h  Mousecodes.h
froth/platform/window/: GLFWWindow.cpp  GLFWWindow.h  Window.cpp  Window.h
froth/renderer/: Renderer.cpp  Renderer.h  VertexBuffer.h
froth/renderer/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFence.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanImageView.cpp  VulkanImageView.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSemaphore.cpp  VulkanSemaphore.h  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h  (+3 more)
froth/src/core/: Application.cpp  Application.h  Entrypoint.cpp  Entrypoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Types.h  UUID.cpp  UUID.h
froth/src/core/events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
froth/src/modules/camera/: Camera.cpp  Camera.h
froth/src/platform/filesystem/: Filesystem.cpp  Filesystem.h
froth/src/platform/keys/: GLFWCodes.cpp  GLFWCodes.h  Keycodes.h
froth/src/platform/window/: GLFWWindow.cpp  GLFWWindow.h  Window.h
froth/src/renderer/: IndexBuffer.h  Renderer.cpp  Renderer.h
froth/src/renderer/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFence.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanImageView.cpp  VulkanImageView.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSampler.cpp  VulkanSampler.h  (+14 more)
froth/src/resources/: Resource.cpp  Resource.h  ResourceImporter.cpp  ResourceImporter.h  ResourceManager.cpp  ResourceManager.h  ResourceMetadata.h  Texture.h  TextureImporter.cpp  TextureImporter.h
froth/src/resources/materials/: Material.h
froth/src/resources/shaders/: Shader.cpp  Shader.h
playground/: CMakeLists.txt  Playground  Playground.cpp
playground/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
scripts/: GenerateProjects_Win.bat
(+53 files in other folders)
